--- a/app/views/statistics/index.html.erb
+++ b/app/views/statistics/index.html.erb
@@ -33,7 +33,7 @@
         <td><%= statistic.red_cards %></td>
         <td><%= statistic.yellow_cards %></td>
         <td><%= statistic.tournament_id %></td>
-        <td><%= statistic.team_id %></td>
+        <td><%= statistic.team.name %></td>
         <td><%= link_to 'Show', statistic %></td>
         <td><%= link_to 'Edit', edit_statistic_path(statistic) %></td>
         <td><%= link_to 'Destroy', statistic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
